--- a/appinfo.json
+++ b/appinfo.json
@@ -1,65 +1,65 @@
 {
-    "appKeys": {},
-    "resources": {
-        "media": [
-            {
-                "name": "IMAGE_STATISTICS_PLACEHOLDER",
-                "file": "images/Capture (1).PNG",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_APP_ICON_DUCATI",
-                "file": "images/shield1_28x28.png",
-                "type": "png",
-                "menuIcon": true
-            },
-            {
-                "name": "IMAGE_PROFILE_ICON_2UP",
-                "file": "images/profile_tandem1_28x28.png",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_PROFILE_ICON_RACE",
-                "file": "images/profile_race1_28x28.png",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_PROFILE_ICON_COMMUTE",
-                "file": "images/profile_commute1_28x28.png",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_STATUS_BAR_ICON_DUCATI",
-                "file": "images/statusbarAppIcon1_11x11.png",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_MENU_ICON_STATISTICS",
-                "file": "images/statistics1_28x28.png",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_MENU_ICON_PROFILES",
-                "file": "images/profiles1_28x28.png",
-                "type": "png"
-            },
-            {
-                "name": "IMAGE_MENU_ICON_SETTINGS",
-                "file": "images/settings1_28x28.png",
-                "type": "png"
-            }
-        ]
-    },
+    "shortName": "Ducati Azione",
+    "versionCode": 1,
     "watchapp": {
         "watchface": false
     },
-    "shortName": "Ducati Azione",
-    "versionLabel": "0.9",
-    "versionCode": 1,
-    "companyName": "michael.buthut@vw.com",
-    "uuid": "49c202a3-ae9e-4cab-93b1-2cb35f004e8c",
     "capabilities": [
         ""
     ],
-    "longName": "Ducati Azione"
+    "versionLabel": "0.9",
+    "companyName": "michael.buthut@vw.com",
+    "longName": "Ducati Azione",
+    "appKeys": {},
+    "uuid": "49c202a3-ae9e-4cab-93b1-2cb35f004e8c",
+    "resources": {
+        "media": [
+            {
+                "file": "images/Capture (1).PNG",
+                "name": "IMAGE_STATISTICS_PLACEHOLDER",
+                "type": "png"
+            },
+            {
+                "menuIcon": true,
+                "file": "images/shield1_28x28.png",
+                "name": "IMAGE_APP_ICON_DUCATI",
+                "type": "png"
+            },
+            {
+                "file": "images/profile_tandem1_28x28.png",
+                "name": "IMAGE_PROFILE_ICON_2UP",
+                "type": "png"
+            },
+            {
+                "file": "images/profile_race1_28x28.png",
+                "name": "IMAGE_PROFILE_ICON_RACE",
+                "type": "png"
+            },
+            {
+                "file": "images/profile_commute1_28x28.png",
+                "name": "IMAGE_PROFILE_ICON_COMMUTE",
+                "type": "png"
+            },
+            {
+                "file": "images/statusbarAppIcon1_11x11.png",
+                "name": "IMAGE_STATUS_BAR_ICON_DUCATI",
+                "type": "png"
+            },
+            {
+                "file": "images/statistics1_28x28.png",
+                "name": "IMAGE_MENU_ICON_STATISTICS",
+                "type": "png"
+            },
+            {
+                "file": "images/profiles1_28x28.png",
+                "name": "IMAGE_MENU_ICON_PROFILES",
+                "type": "png"
+            },
+            {
+                "file": "images/settings1_28x28.png",
+                "name": "IMAGE_MENU_ICON_SETTINGS",
+                "type": "png"
+            }
+        ]
+    }
 }
